CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(pg_query CXX C)

FILE(GLOB pg_query_srcs ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c ${CMAKE_CURRENT_SOURCE_DIR}/src/postgres/*.c)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/postgres/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/vendor)

ADD_LIBRARY(pg_query STATIC ${pg_query_srcs})

SET_TARGET_PROPERTIES(pg_query PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(pg_query PROPERTIES POSITION_INDEPENDENT_CODE ON)
